WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51299
Text emphasis marks are not always included in the selection highlight
https://bugs.webkit.org/show_bug.cgi?id=51299
Summary
Text emphasis marks are not always included in the selection highlight
mitz
Reported
2010-12-18 15:14:34 PST
Text emphasis marks are not always included in the selection highlight
Attachments
Account for annotations in selectionTop() and selectionBottom()
(136.57 KB, patch)
2010-12-18 15:26 PST
,
mitz
zwarich
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-12-18 15:26:11 PST
Created
attachment 76946
[details]
Account for annotations in selectionTop() and selectionBottom()
mitz
Comment 2
2010-12-18 15:32:58 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/74319
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug