Text emphasis marks are not always included in the selection highlight https://bugs.webkit.org/show_bug.cgi?id=51299

Reviewed by Cameron Zwarich.

WebCore:

Affects pixel results of fast/text/emphasis.html

Account for annotations in selectionTop() and selectionBottom().

* rendering/RootInlineBox.cpp:
(WebCore::RootInlineBox::selectionTop):
(WebCore::RootInlineBox::selectionBottom):

LayoutTests:

* platform/mac/fast/text/emphasis-expected.checksum:
* platform/mac/fast/text/emphasis-expected.png:



Canonical link: https://commits.webkit.org/64661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74319 268f45cc-cd09-0410-ab3c-d52691b4dbfc